@@ -1,6 +1,7 @@
 16-03-2015 Gabriele Bertoli <gbertoli@cern.ch>
 	* Added MiniReaderElectron class
 	* Added MiniReaderMuon class
+	* Added MiniReaderMissingET class
 
 16-03-2015 Gabriele Bertoli <gbertoli@cern.ch>
 	* Manage to read TTree
